2003-06-05  Adam Fedor  <fedor@gnu.org>

	* GMAppKit.m (-initWithModelUnarchiver:): #ifdef out ivar assignment
	when compiling nib2gmodel.

2003-06-04 23:02  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSCell.m (-_setupTextWithFrame:inView:editor:): Use a (much)
	larger maximum size for the field editor.

2003-05-26  Adam Fedor  <fedor@gnu.org>

	* Source/NSApplication.m (gsapp_user_bundles): New function
	(-_init): Use it.
	* Documentation/Gui/DefaultsSummary.gsdoc: Update.

2003-05-25  Adam Fedor  <fedor@gnu.org>

	* Version 0.8.6

2003-05-22 18:07  Alexander Malmberg <alexander@malmberg.org>

	* Tools/make_services (addExtensionsForApplication): Parse
	NSExtensions dictionary correctly. Based on patch from Jeff
	Teunissen.

2003-05-22  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSFontPanel.m
	[_familySelectionChanged:] removed unused local variable.
	* Headers/gnustep/gui/NSWorkspace.h
	Added new MacOSX methods.
	* Source/NSWorkspace.m
	Basic implemention of [activeApplication] and [launchedApplications].
	* Source/NSApplication.m
	In [finishLaunching] and [replyToApplicationShouldTerminate:] use
	[NSWorkspace activeApplication] to get application information.

2003-05-20 22:50  Alexander Malmberg <alexander@malmberg.org>

	* Tools/make_services.m (scanDynamic): Skip anything with a .service
	extension.

2003-05-18 00:00  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gnustep/gui/DPSOperators.h,
	Headers/gnustep/gui/PSOperators.h,
	Headers/gnustep/gui/GSMethodTable.h,
	Headers/gnustep/gui/NSGraphicsContext.h, Source/NSGraphicsContext.m:
	Add shfill operator.

2003-05-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSInfoPanel.m: Draw authors in the order they occur in
	the info.plist

2003-05-14 Serg Stoyan <stoyan@on.com.ua>

	* Source/NSMenuView.m 
	(-setFont:): Set cell height at least to 20 pixels.
	
2003-05-13 20:19  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSButton.m (-setState:, -setNextState): Mark the view